[package]
name = "corust-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]    
ansi_term                   = "0.12"
anyhow                      = "1.0"
corust-components           = { version = "*", path = "../components" }
corust-sandbox              = { version = "*", path = "../sandbox" }
env_logger                  = "0.11"
fnv                         = "1.0"
futures-util                = "0.3"
log                         = "0.4"
rand                        = "0.8"
random_color                = "0.8"
serde                       = { version = "1.0", features = ["derive"] } 
serde_json                  = "1.0"
tempfile                    = "3.0"
thiserror                   = "1.0"
tokio                       = { version = "1", features = ["full"] }
tokio-util                  = { version = "0.7", features = ["io"] }
tokio-stream                = "0.1"
uuid                        = { version = "1", features = ["v4", "serde"] }
warp                        = "0.3"
    