[package]
name = "corust-components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow                      = "1"
console_error_panic_hook    = "0.1"
corust-transforms           = { version = "*", path = "../transforms" }
fnv                         = "1"
# Not a direct dependency, but listed to enable the "js" feature to toggle `wasm32-unknown-unknown` support
getrandom                   = { version = "0.2", features = ["js"] }
log                         = "0.4"
serde                       = { version = "1.0", features = ["derive"] } 
serde_json                  = "1.0"
serde-wasm-bindgen          = "0.6"
thiserror                   = "1.0"
wasm-bindgen                = "0.2.84"
web-sys                     = { version = "0.3", features = ["Window", "Performance"] }

[features]
# Metrics assume the target is `wasm32-unknown-unknown`
metrics = []
# Gates any features which require target as `wasm32-unknown-unknown`
js = []

[profile.release]
debug = true