[package]
name = "populate_crates"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow                  = "1.0.86"
atom_syndication        = "0.12"
cargo                   = "0.80"
env_logger              = "0.11"
log                     = "0.4"
reqwest                 = { version = "0.12", features = ["blocking"] }
serde                   = { version = "1.0.20", features = ["derive"] }
serde_json              = "1.0.120"
structopt               = "0.3"
toml                    = "0.8"