[package]
name = "corust-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term               = "0.12"
bincode                 = "1.0"
chrono                  = "0.4"
enumset                 = "1.0"
env_logger              = "0.11"
log                     = "0.4"
rand                    = "0.8"
snafu                   = "0.8"
serde                   = { version = "1.0", features = ["derive"] } 
tokio                   = { version = "1", features = ["full"] }
tokio-stream            = "0.1"

[dev-dependencies]
assertables             = "7.0"
tempfile                = "3.0"